<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/sumvect_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/vector1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mag1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/magnitude"
                android:inputType="numberSigned|numberDecimal" />

            <EditText
                android:id="@+id/ang1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/angle"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/vector2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/magnitude"
                android:inputType="numberSigned|numberDecimal" />

            <EditText
                android:id="@+id/ang2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/angle"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/vector3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mag3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/magnitude"
                android:inputType="numberSigned|numberDecimal" />

            <EditText
                android:id="@+id/ang3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/angle"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/result"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/magres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/magnitude" />

            <TextView
                android:id="@+id/angres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/angle" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>