<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/four" />

        <Spinner
            android:id="@+id/spinnerkin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kin_vel" />

            <EditText
                android:id="@+id/editVel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kin_invel" />

            <EditText
                android:id="@+id/editInvel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kin_acel" />

            <EditText
                android:id="@+id/editAcel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kin_dis" />

            <EditText
                android:id="@+id/editTime1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/kin1btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/calculate" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>